First push of full version

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,380 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{mcdermid2025isbl,
+  author       = {Eric John McDermid},
+  title        = {Dialogical Networks and the Psalms},
+  journal      = {Paper presented at the International Society of Biblical Literature Annual Meeting},
+  year         = {2025},
+  month        = {June},
+  note         = {Uppsala, Sweden}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{mcdermid2025sbla,
+  author       = {Eric John McDermid},
+  title        = {The Tree of the Knowledge of Praise and Lament},
+  journal      = {Accepted for presentation at the Society of Biblical Literature Annual Meeting},
+  year         = {2025},
+  month        = {November},
+  note         = {Boston, MA, USA}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{mcdermid2025sblb,
+  author       = {Eric John McDermid},
+  title        = {Two's Company, Three's a Conspiracy:  Dynamic Network Analysis of 2 Samuel},
+  journal      = {Accepted for presentation at the Society of Biblical Literature Annual Meeting},
+  year         = {2025},
+  month        = {November},
+  note         = {Boston, MA, USA}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{DBLP:journals/dam/ChengMS16,
+  author    = {Christine T. Cheng and
+               Eric McDermid and
+               Ichiro Suzuki},
+  title     = {Eccentricity, center and radius computations on the cover graphs of
+               distributive lattices with applications to stable matchings},
+  journal   = {Discret. Appl. Math.},
+  volume    = {205},
+  pages     = {27--34},
+  year      = {2016},
+  url       = {https://doi.org/10.1016/j.dam.2015.11.016},
+  doi       = {10.1016/j.dam.2015.11.016},
+  timestamp = {Thu, 11 Feb 2021 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/journals/dam/ChengMS16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@incollection{DBLP:reference/algo/McDermid16,
+  author    = {Eric McDermid},
+  title     = {Maximum Cardinality Stable Matchings},
+  booktitle = {Encyclopedia of Algorithms},
+  pages     = {1227--1230},
+  year      = {2016},
+  url       = {https://doi.org/10.1007/978-1-4939-2864-4\_677},
+  doi       = {10.1007/978-1-4939-2864-4\_677},
+  timestamp = {Wed, 12 Jul 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/reference/algo/McDermid16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{DBLP:journals/algorithmica/EdwardsM15,
+  author    = {Keith Edwards and
+               Eric McDermid},
+  title     = {A General Reduction Theorem with Applications to Pathwidth and the
+               Complexity of {MAX} 2-CSP},
+  journal   = {Algorithmica},
+  volume    = {72},
+  number    = {4},
+  pages     = {940--968},
+  year      = {2015},
+  url       = {https://doi.org/10.1007/s00453-014-9883-7},
+  doi       = {10.1007/s00453-014-9883-7},
+  timestamp = {Wed, 17 May 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/algorithmica/EdwardsM15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{DBLP:journals/algorithmica/McDermidI14,
+  author    = {Eric McDermid and
+               Robert W. Irving},
+  title     = {Sex-Equal Stable Matchings: Complexity and Exact Algorithms},
+  journal   = {Algorithmica},
+  volume    = {68},
+  number    = {3},
+  pages     = {545--570},
+  year      = {2014},
+  url       = {https://doi.org/10.1007/s00453-012-9672-0},
+  doi       = {10.1007/s00453-012-9672-0},
+  timestamp = {Wed, 17 May 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/algorithmica/McDermidI14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{DBLP:journals/dam/BiroM14,
+  author    = {P{\'{e}}ter Bir{\'{o}} and
+               Eric McDermid},
+  title     = {Matching with sizes (or scheduling with processing set restrictions)},
+  journal   = {Discret. Appl. Math.},
+  volume    = {164},
+  pages     = {61--67},
+  year      = {2014},
+  url       = {https://doi.org/10.1016/j.dam.2011.11.003},
+  doi       = {10.1016/j.dam.2011.11.003},
+  timestamp = {Thu, 11 Feb 2021 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/journals/dam/BiroM14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{DBLP:conf/bigdataconf/MuganCHMSQC14,
+  author    = {Jonathan Mugan and
+               Ranga Chari and
+               Laura Hitt and
+               Eric McDermid and
+               Marsha Sowell and
+               Yuan Qu and
+               Thayne Coffman},
+  editor    = {Jimmy Lin and
+               Jian Pei and
+               Xiaohua Hu and
+               Wo Chang and
+               Raghunath Nambiar and
+               Charu C. Aggarwal and
+               Nick Cercone and
+               Vasant G. Honavar and
+               Jun Huan and
+               Bamshad Mobasher and
+               Saumyadipta Pyne},
+  title     = {Entity resolution using inferred relationships and behavior},
+  booktitle = {2014 {IEEE} International Conference on Big Data {(IEEE} BigData 2014),
+               Washington, DC, USA, October 27-30, 2014},
+  pages     = {555--560},
+  publisher = {{IEEE} Computer Society},
+  year      = {2014},
+  url       = {https://doi.org/10.1109/BigData.2014.7004273},
+  doi       = {10.1109/BigData.2014.7004273},
+  timestamp = {Fri, 19 Nov 2021 16:08:20 +0100},
+  biburl    = {https://dblp.org/rec/conf/bigdataconf/MuganCHMSQC14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/algorithms/ChengM13,
+  author    = {Christine T. Cheng and
+               Eric McDermid},
+  title     = {Maximum Locally Stable Matchings},
+  journal   = {Algorithms},
+  volume    = {6},
+  number    = {3},
+  pages     = {383--395},
+  year      = {2013},
+  url       = {https://doi.org/10.3390/a6030383},
+  doi       = {10.3390/a6030383},
+  timestamp = {Tue, 14 Aug 2018 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/algorithms/ChengM13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{DBLP:conf/isi/MuganMMH13,
+  author    = {Jonathan Mugan and
+               Eric McDermid and
+               Abbey McGrew and
+               Laura Hitt},
+  editor    = {Kristin Glass and
+               Richard Colbaugh and
+               Antonio Sanfilippo and
+               Anne Kao and
+               Michael Gabbay and
+               Courtney D. Corley and
+               Jiexun Li and
+               Latifur Khan and
+               Adam Wynne and
+               Lisa Coote and
+               Wenji Mao and
+               Daniel Zeng and
+               Ahmad Yaghoobi},
+  title     = {Identifying groups of interest through temporal analysis and event
+               response monitoring},
+  booktitle = {2013 {IEEE} International Conference on Intelligence and Security
+               Informatics, Seattle, WA, USA, June 4-7, 2013},
+  pages     = {185--190},
+  publisher = {{IEEE}},
+  year      = {2013},
+  url       = {https://doi.org/10.1109/ISI.2013.6578816},
+  doi       = {10.1109/ISI.2013.6578816},
+  timestamp = {Fri, 19 Jun 2020 20:03:34 +0200},
+  biburl    = {https://dblp.org/rec/conf/isi/MuganMMH13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/tcs/BiroMM12,
+  author    = {P{\'{e}}ter Bir{\'{o}} and
+               David F. Manlove and
+               Eric McDermid},
+  title     = {"Almost stable" matchings in the Roommates problem with
+               bounded preference lists},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {432},
+  pages     = {10--20},
+  year      = {2012},
+  url       = {https://doi.org/10.1016/j.tcs.2012.01.022},
+  doi       = {10.1016/j.tcs.2012.01.022},
+  timestamp = {Wed, 17 Feb 2021 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/journals/tcs/BiroMM12.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@phdthesis{DBLP:phd/ethos/McDermid11,
+  author    = {Eric McDermid},
+  title     = {A structural approach to matching problems with preferences},
+  school    = {University of Glasgow, {UK}},
+  year      = {2011},
+  url       = {http://theses.gla.ac.uk/2371/},
+  timestamp = {Tue, 05 Apr 2022 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/phd/ethos/McDermid11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/jco/McDermidI11,
+  author    = {Eric McDermid and
+               Robert W. Irving},
+  title     = {Popular matchings: structure and algorithms},
+  journal   = {J. Comb. Optim.},
+  volume    = {22},
+  number    = {3},
+  pages     = {339--358},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/s10878-009-9287-9},
+  doi       = {10.1007/s10878-009-9287-9},
+  timestamp = {Thu, 18 May 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/jco/McDermidI11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{DBLP:conf/icalp/ChengMS11,
+  author    = {Christine T. Cheng and
+               Eric McDermid and
+               Ichiro Suzuki},
+  editor    = {Luca Aceto and
+               Monika Henzinger and
+               Jir{\'{\i}} Sgall},
+  title     = {Center Stable Matchings and Centers of Cover Graphs of Distributive
+               Lattices},
+  booktitle = {Automata, Languages and Programming - 38th International Colloquium,
+               {ICALP} 2011, Zurich, Switzerland, July 4-8, 2011, Proceedings, Part
+               {I}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6755},
+  pages     = {678--689},
+  publisher = {Springer},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-3-642-22006-7\_57},
+  doi       = {10.1007/978-3-642-22006-7\_57},
+  timestamp = {Tue, 14 May 2019 10:00:44 +0200},
+  biburl    = {https://dblp.org/rec/conf/icalp/ChengMS11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{DBLP:conf/wg/ChengMS11,
+  author    = {Christine T. Cheng and
+               Eric McDermid and
+               Ichiro Suzuki},
+  editor    = {Petr Kolman and
+               Jan Kratochv{\'{\i}}l},
+  title     = {Planarization and Acyclic Colorings of Subcubic Claw-Free Graphs},
+  booktitle = {Graph-Theoretic Concepts in Computer Science - 37th International
+               Workshop, {WG} 2011, Tepl{\'{a}} Monastery, Czech Republic, June
+               21-24, 2011. Revised Papers},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6986},
+  pages     = {107--118},
+  publisher = {Springer},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-3-642-25870-1\_11},
+  doi       = {10.1007/978-3-642-25870-1\_11},
+  timestamp = {Tue, 14 May 2019 10:00:40 +0200},
+  biburl    = {https://dblp.org/rec/conf/wg/ChengMS11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/algorithmica/BiroM10,
+  author    = {P{\'{e}}ter Bir{\'{o}} and
+               Eric McDermid},
+  title     = {Three-Sided Stable Matchings with Cyclic Preferences},
+  journal   = {Algorithmica},
+  volume    = {58},
+  number    = {1},
+  pages     = {5--18},
+  year      = {2010},
+  url       = {https://doi.org/10.1007/s00453-009-9315-2},
+  doi       = {10.1007/s00453-009-9315-2},
+  timestamp = {Wed, 17 May 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/algorithmica/BiroM10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/endm/BiroM10,
+  author    = {P{\'{e}}ter Bir{\'{o}} and
+               Eric McDermid},
+  title     = {Matching with sizes (or scheduling with processing set restrictions)},
+  journal   = {Electron. Notes Discret. Math.},
+  volume    = {36},
+  pages     = {335--342},
+  year      = {2010},
+  url       = {https://doi.org/10.1016/j.endm.2010.05.043},
+  doi       = {10.1016/j.endm.2010.05.043},
+  timestamp = {Thu, 20 Feb 2020 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/journals/endm/BiroM10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/jco/McDermidM10,
+  author    = {Eric McDermid and
+               David F. Manlove},
+  title     = {Keeping partners together: algorithmic results for the hospitals/residents
+               problem with couples},
+  journal   = {J. Comb. Optim.},
+  volume    = {19},
+  number    = {3},
+  pages     = {279--303},
+  year      = {2010},
+  url       = {https://doi.org/10.1007/s10878-009-9257-2},
+  doi       = {10.1007/s10878-009-9257-2},
+  timestamp = {Tue, 13 Oct 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/jco/McDermidM10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{DBLP:conf/cocoon/McDermidI09,
+  author    = {Eric McDermid and
+               Robert W. Irving},
+  editor    = {Hung Q. Ngo},
+  title     = {Popular Matchings: Structure and Algorithms},
+  booktitle = {Computing and Combinatorics, 15th Annual International Conference,
+               {COCOON} 2009, Niagara Falls, NY, USA, July 13-15, 2009, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5609},
+  pages     = {506--515},
+  publisher = {Springer},
+  year      = {2009},
+  url       = {https://doi.org/10.1007/978-3-642-02882-3\_50},
+  doi       = {10.1007/978-3-642-02882-3\_50},
+  timestamp = {Tue, 14 May 2019 10:00:35 +0200},
+  biburl    = {https://dblp.org/rec/conf/cocoon/McDermidI09.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{DBLP:conf/icalp/McDermid09,
+  author    = {Eric McDermid},
+  editor    = {Susanne Albers and
+               Alberto Marchetti{-}Spaccamela and
+               Yossi Matias and
+               Sotiris E. Nikoletseas and
+               Wolfgang Thomas},
+  title     = {A 3/2-Approximation Algorithm for General Stable Marriage},
+  booktitle = {Automata, Languages and Programming, 36th International Colloquium,
+               {ICALP} 2009, Rhodes, Greece, July 5-12, 2009, Proceedings, Part {I}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5555},
+  pages     = {689--700},
+  publisher = {Springer},
+  year      = {2009},
+  url       = {https://doi.org/10.1007/978-3-642-02927-1\_57},
+  doi       = {10.1007/978-3-642-02927-1_57},
+  timestamp = {Tue, 14 May 2019 10:00:44 +0200},
+  biburl    = {https://dblp.org/rec/conf/icalp/McDermid09.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/tcs/ChengMS08,
+  author    = {Christine T. Cheng and
+               Eric McDermid and
+               Ichiro Suzuki},
+  title     = {A unified approach to finding good stable matchings in the hospitals/residents
+               setting},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {400},
+  number    = {1-3},
+  pages     = {84--99},
+  year      = {2008},
+  url       = {https://doi.org/10.1016/j.tcs.2008.02.014},
+  doi       = {10.1016/j.tcs.2008.02.014},
+  timestamp = {Wed, 17 Feb 2021 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/journals/tcs/ChengMS08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/ipl/McDermidCS07,
+  author    = {Eric McDermid and
+               Christine T. Cheng and
+               Ichiro Suzuki},
+  title     = {Hardness results on the man-exchange stable marriage problem with
+               short preference lists},
+  journal   = {Inf. Process. Lett.},
+  volume    = {101},
+  number    = {1},
+  pages     = {13--19},
+  year      = {2007},
+  url       = {https://doi.org/10.1016/j.ipl.2006.07.005},
+  doi       = {10.1016/j.ipl.2006.07.005},
+  timestamp = {Fri, 26 May 2017 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/ipl/McDermidCS07.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
